@@ -13,43 +13,64 @@ This project contains two versions of the classic Tic Tac Toe game: a console-ba
   -Graphical user interface for Tic Tac Toe.
   -Play against an AI opponent.
   -Displays winning line on game over.
+# 🎮 Tic Tac Toe Game (Java)
+
+A simple **Tic Tac Toe** game developed in Java using a GUI interface. This project allows two players to play the classic game in turns, with interactive buttons and basic win/draw logic.
+
+---
+
+## 🧠 Features
+
+- ✅ Two-player gameplay
+- ✅ Graphical User Interface (GUI) using Java Swing
+- ✅ Interactive grid with responsive button clicks
+- ✅ Win/draw detection and result display
+- ✅ Clear visual layout for a smooth experience
+
+---
+
+## 📂 Project Structure
+
+Tic-tac-Toe-game/
+├── TicTacToe.java # Main Java file with GUI and game logic
+├── README.md # Project documentation (this file)
+
+
+
+---
+
+## 🚀 How to Run the Project
+
+1. **Clone the repository**:
+   ```bash
+   git clone https://github.com/muskan-chauhan7/Tic-tac-Toe-game-.git
+   cd Tic-tac-Toe-game
+2. **Compile the Java file**:
+
+   ```bash
+
+   javac TicTacToe.java
+3. **Run the game**:
+
+   ```bash
+
+   java TicTacToe
+## 📸 Screenshots
+![2025-06-09](https://github.com/user-attachments/assets/74105fe5-2a6e-4af1-87f1-84ed60c7c81e)
+![2025-06-09 (1)](https://github.com/user-attachments/assets/1be478fd-768c-42e3-aae2-07b39b4ef5f6)
+
+
+
+## 📋 Rules of the Game
+  -Two players take turns: Player 1 uses “X” and Player 2 uses “O”.
+
+  -The first to get 3 marks in a row (horizontally, vertically, or diagonally) wins.
+
+  -If the grid fills up without a winner, it's a draw.
+
+  
   
 
-## Prerequisites
-- JDK 11 or higher.
-- JavaFX SDK (for the JavaFX version).
-
-## Setup and Installation
-1. **JavaFX SDK**: Download the JavaFX SDK from [OpenJFX](https://openjfx.io/) and extract it to a known directory if you plan to run the JavaFX version.
-2. **Clone the Repository**: Use `git clone <repository-url>` to clone this repository to your local machine.
-
-## Running the Applications
-
-### Console Version
-1. Navigate to the directory containing the `TicTacToe.java` file.
-2. Compile the Java file using `javac TicTacToe.java`.
-3. Run the compiled class with `java TicTacToe`.
-4. Follow the on-screen instructions to play the game.
-
-### JavaFX Version
-1. Ensure the JavaFX SDK is correctly set up in your IDE or on your system.
-2. Compile the `TicTacToeFX.java` file, making sure to include the JavaFX libraries in your classpath.
-3. Run the compiled class with the necessary VM options to include the JavaFX modules:
-   ```
-   --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml
-
-4. Follow the graphical interface to play against the AI.
-
-## How to Play
-
-### Console Version
-- Players take turns entering the row and column numbers where they wish to place their mark (X or O).
-- The game ends when one player has three of their marks in a row (horizontally, vertically, or diagonally) or when all squares are filled.
-
-### JavaFX Version
-- Click on the square where you wish to place your mark (X).
-- The AI will make its move (O) after you.
-- The game ends when one player wins or all squares are filled, with the winning line displayed.
 
 ## Contributing
 Contributions to enhance the games, add new features, or improve the AI algorithm are welcome. Please fork the repository, make your changes, and submit a pull request with a detailed description of your improvements.
